force-app/main/default/objects/pymtTest__Gateway_Credential__mdt/pymtTest__Gateway_Credential__mdt.object-meta.xml
<CustomObject>
    <description>Stores secure credentials for payment gateways. Use Protected visibility for sensitive data.</description>
    <label>Gateway Credential</label>
    <pluralLabel>Gateway Credentials</pluralLabel>
</CustomObject>