force-app/main/default/objects/pymtTest__Gateway_Credential__mdt/fields/pymtTest__API_Login_Id__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__API_Login_Id__c</fullName>
    <description>API Login ID (Authorize.Net) or API Key identifier</description>
    <label>API Login Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>