force-app/main/default/objects/pymtTest__Gateway_Credential__mdt/fields/pymtTest__Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Secret_Key__c</fullName>
    <description>Secret API Key (Stripe) or equivalent</description>
    <label>Secret Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>