force-app/main/default/objects/pymtTest__Gateway_Credential__mdt/fields/pymtTest__Transaction_Key__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Transaction_Key__c</fullName>
    <description>Transaction Key (Authorize.Net) or Secret Key</description>
    <label>Transaction Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>